<resources>
    <string name="app_name">sms</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pcs_final">PCS final</string>
    <string name="phone_number">phone number</string>
    <string name="send_sms">Send!</string>
    <string name="result">result</string>
    <string name="server">SERVER</string>
    <string name="serverState">server state</string>
    <string name="connect">CONNECT</string>
    <string name="title_activity_server">ServerActivity</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="Treasure_Monitor">Treasure Monitor</string>
</resources>