<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/txtServerState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serverState"
        android:layout_below="@+id/txtUser"/>

    <TextView
        android:id="@+id/txtUsername"
        android:text="@string/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtServerState"/>

    <EditText android:id="@+id/edtUsername"
        android:text="@string/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUsername"/>

    <TextView
        android:id="@+id/txtPassword"
        android:text="@string/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtUsername"/>

    <EditText android:id="@+id/edtPassword"
        android:text="@string/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:password="true"
        android:layout_below="@+id/txtPassword"/>

    <Button android:id="@+id/btnServerConnect"
        android:text="@string/connect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtPassword"/>

    <TextView android:id="@+id/txtResult"
        android:text="@string/result"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnServerConnect"/>
    
</RelativeLayout>