<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/pcsFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Treasure_Monitor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"/>

    <!--<Button android:id="@+id/btnTestSms"
        android:text="hi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pcsFinal"/>-->

    <ImageView
        android:id="@+id/imageUser"
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:layout_gravity="center"
        android:src="@drawable/user"
        android:layout_below="@+id/pcsFinal"/>

    <TextView
        android:id="@+id/txtUsername"
        android:text="@string/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageUser"/>

    <EditText android:id="@+id/inputUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUsername"/>

    <TextView
        android:id="@+id/txtPassword"
        android:text="@string/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputUsername"/>

    <EditText android:id="@+id/inputPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"/>

    <TextView android:id="@+id/txtPhoneNumber"
        android:text="@string/phone_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputPassword"/>

    <EditText android:id="@+id/inputPhoneNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPhoneNumber"/>

    <Button android:id="@+id/btnSendSms"
        android:text="@string/send_sms"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputPhoneNumber"/>

    <TextView android:id="@+id/txtResult"
        android:text="@string/result"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSendSms"/>

    <!--<Button android:id="@+id/btnLoginServer"
        android:text="@string/server"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtPassword"/>-->

</RelativeLayout>
